<resources>
    <string name="app_name">Clg Stuff</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="title_activity_scholarship">ScholarshipActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_userProfile">Profile</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_support">Support</string>
    <string name="menu_logout">LogOut</string>
    <string name="menu_scholarship">Scholarship</string>


    <string name="menu_help">Help</string>
    <string name="menu_rating">Rating Us</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="caste_of_student">
        <item>OPEN</item>
        <item>OBC</item>
        <item>ST</item>
        <item>SC</item>
    </string-array>
</resources>
