<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_scholarship"
            android:icon="@drawable/ic_scholarship"
            android:title="@string/menu_scholarship" />
        <item
            android:id="@+id/nav_menu_user_profile"
            android:icon="@drawable/ic_user_icon"
            android:title="@string/menu_userProfile" />
        <item
            android:id="@+id/nav_menu_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
        <item
            android:id="@+id/nav_menu_help"
            android:icon="@drawable/ic_help_icon"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_menu_app_rating"
            android:icon="@drawable/ic_rating_application"
            android:title="@string/menu_rating" />
    </group>
    <item android:title="">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_menu_setting"
                    android:icon="@drawable/ic_app_setting"
                    android:title="@string/menu_setting"
                    />
                <item
                    android:id="@+id/nav_menu_support"
                    android:icon="@drawable/ic_support"
                    android:title="@string/menu_support"
                    />
            </group>
        </menu>
    </item>
</menu>